Wrote a function to look in every environment for a timezone (getCurrInfo.js). Installed moment timezone library to handle converting the user's date and time to the correct timezone for the agency.

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "jsonexport": "^2.4.1",
     "moment": "^2.24.0",
+    "moment-timezone": "^0.5.25",
     "request": "^2.88.0",
     "yargs": "^13.2.2"
   },
